added forgot password button

--- a/Pages/log-in.cshtml
+++ b/Pages/log-in.cshtml
@@ -19,7 +19,7 @@
             <input type="password" class="form-input" name="Input.Password" placeholder="Password" required />
         </div>
         <div class="forgot-pass-btn-wrapper">
-            <a href="/forgotPass.cshtml" class="=forgot-pass-btn">Forgot Password</a>
+            <a href="/forgotPass" class="forgot-pass-btn" style="text-decoration: none;">Forgot Password</a>
         </div>
         <div class="login-btn-wrapper">
             <button type="submit" class="login-btn">Log in</button>
