--- a/Pages/user_account.cshtml
+++ b/Pages/user_account.cshtml
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4+0V8iIdNv0U+d7gRZnt9+wDTrvE9OQ9z8mNIUlTTMQQKO6oGpCgkFvZ5j8v7Zb1K2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" href="/images/logo.png" type="image/png">
+    <link rel="icon" href="/images/logo.png" type="image/png">     
 }
     <figure class="logo">
         <a href="/"><img src="/images/logo.png" alt="PayFair Logo"></a>
@@ -45,21 +45,23 @@
             </button>
         </form>
     </div>
+    <!-- change password button in advanced settings-->
     <div class="popup-overlay" id="password-modal" style="display: none;">
-        <div class="popup-dialog">
+        <div class="popup-dialog"> <!--show dialog for changing password-->
             <h3>Change Password</h3>
             <form id="password-form">
                 <div class="password-form-group">
                     <label for="currentPassword">Current Password</label>
-                    <input type="password" id="currentPassword" name="CurrentPassword" required />
+                    <input type="password" id="currentPassword" name="CurrentPassword" required minlength="6"/>
                 </div>
                 <div class="password-form-group">
                     <label for="newPassword">New Password</label>
-                    <input type="password" id="newPassword" name="NewPassword" required />
+                    <input type="password" id="newPassword" name="NewPassword" required minlength="6" oninput="document.getElementById('confirmPassword').pattern = this.value.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');"/>
                 </div>
                 <div class="password-form-group">
                     <label for="confirmPassword">Confirm New Password</label>
-                    <input type="password" id="confirmPassword" name="ConfirmPassword" required />
+                    <input type="password" id="confirmPassword" name="ConfirmPassword" required minlength="6" title="Passwords must match"/>
+                    <span class="error-message" id="confirm-password-error">Passwords do not match</span>
                 </div>
                 <button type="submit" class="confirm-btn">Change Password</button>
                 <button type="button" class="cancel-btn" id="cancel-password">Cancel</button>
