--- a/wwwroot/css/user_account.css
+++ b/wwwroot/css/user_account.css
@@ -373,6 +373,16 @@ body {
 #confirmPassword:focus {
     border-color: #1e3a8a;
 }
+.forgot-password-link { /*forgot password button below the  current password*/
+    display: inline-block;
+    margin-top: 5px;
+    font-size: 12px;
+    color: #007bff;
+    text-decoration: none;
+}
+.forgot-password-link:hover {
+    text-decoration: underline;
+}
 .popup-dialog h3 {color: #1e3a8a; margin-top: 0; margin-bottom: 2rem; }
 .change-password-btn,
 .delete-account-btn {
