--- a/Pages/forgotPass.cshtml
+++ b/Pages/forgotPass.cshtml
@@ -30,7 +30,7 @@
                 <div class="error-message">Password must be atleast 6 characters long</div>
             </div>
             <div class="form-group">
-                <input type="password" class="form-input" name="Input.ConfirmPassword" id="password" placeholder="Confirm Password" required>
+                <input type="password" class="form-input" name="Input.ConfirmPassword" id="password" placeholder="Confirm Password" required min-length="6">
                 <div class="error-message" id="confirmError">Passwords do not match</div>
             </div>
             <div class="confirm-button-wrapper">
