with passkey in signUp

--- a/Pages/signUp.cshtml
+++ b/Pages/signUp.cshtml
@@ -34,6 +34,10 @@
             <input type="password" class="form-input" name="Input.ConfirmPassword" id="confirmPassword" placeholder="Confirm Password" required>
             <div class="error-message" id="confirmError">Passwords do not match</div>
         </div>
+        <div class="form-group">
+            <input type="password" class="form-input" name="Input.passkey" id="passkey" placeholder="Password Key" required>
+            <div class="error-message" id="confirmError">Please enter your passkey</div>
+        </div>
         <div class="login-btn-wrapper">
             <button type="submit" class="login-btn">Sign Up</button>
         </div>
