--- a/wwwroot/css/log-in.css
+++ b/wwwroot/css/log-in.css
@@ -22,7 +22,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding-left: 700px;
-    padding-top: 50px;
+    padding-top: 10px;
     gap: 0px;
     font-family: Poppins, sans-serif;
     justify-content: center;
@@ -138,7 +138,7 @@ body {
 }
 
 .login-section {
-    padding-top: 5px;
+    padding-top: 0;
     padding-left: 0px;
     text-align: center;
     color: #6b7280;
