password key on forgotpass Pages

--- a/Pages/signUp.cshtml
+++ b/Pages/signUp.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout";
 }
 @section Styles {
-    <link rel="stylesheet" href="/css/log-in.css" />
+    <link rel="stylesheet" href="~/css/log-in.css" />
 }
 
 <div class="signup-container"> 
