--- a/Pages/forgotPass.cshtml
+++ b/Pages/forgotPass.cshtml
@@ -26,11 +26,15 @@
                 <div class="error-message" id="emailError">Please enter valid Gmail address</div>
             </div>
             <div class="form-group">
+                <input type="password" class="form-input" name="Input.passkey" id="passkey" placeholder="Password Key" required min-length="6">
+                <div class="error-message">Please enter your passkey</div>
+            </div>
+            <div class="form-group">
                 <input type="password" class="form-input" name="Input.Password" id="password" placeholder="New Password" required min-length="6">
                 <div class="error-message">Password must be atleast 6 characters long</div>
             </div>
             <div class="form-group">
-                <input type="password" class="form-input" name="Input.ConfirmPassword" id="password" placeholder="Confirm Password" required min-length="6">
+                <input type="password" class="form-input" name="Input.ConfirmPassword" id="confirmpassword" placeholder="Confirm Password" required min-length="6">
                 <div class="error-message" id="confirmError">Passwords do not match</div>
             </div>
             <div class="confirm-button-wrapper">
