--- a/Pages/forgotPass.cshtml
+++ b/Pages/forgotPass.cshtml
@@ -19,22 +19,15 @@
 
     <div class="forgot-pass-container">
         <h1 class="forgot-pass-hdr">Forgot Password</h1>
+        <p class="forgot-pass-subtitle">Enter your email address to receive a password reset link</p>
 
         <form id="passwordForm" method="post">
             <div class="form-group">
                 <input type="email" class="form-input" name="Input.Email" placeholder="Email" required pattern="^[a-zA-Z0-9._%+-]+@@gmail\.com" title="Please enter a valid Gmail address (example@gmail.com)">
                 <div class="error-message" id="emailError">Please enter valid Gmail address</div>
             </div>
-            <div class="form-group">
-                <input type="password" class="form-input" name="Input.Password" id="password" placeholder="New Password" required min-length="6">
-                <div class="error-message">Password must be atleast 6 characters long</div>
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-input" name="Input.ConfirmPassword" id="confirmpassword" placeholder="Confirm Password" required min-length="6">
-                <div class="error-message" id="confirmError">Passwords do not match</div>
-            </div>
             <div class="confirm-button-wrapper">
-                <button type="submit" class="forgot-pass-btn">Confirm</button>
+                <button type="submit" class="forgot-pass-btn">Send to my Email</button>
             </div>
         </form>
     </div>
